# person-service-rust

./: .clinerules  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migration  README.md
.github/workflows/: ci.yml  deploy.yml
docs/adr/: 000-snapshot-inicial.md
migrations/: 20260211003523_create_person_table.sql  20260220114513_create_person_address_table.sql  20260223115122_fix_primary_key_constraint.sql  20260226110800_create_outbox_table.sql
specs/api/: openapi.yaml
specs/stories/: 001-cadastro-atual.md
src/: main.rs
src/application/: use_cases.rs
src/application/use_cases/: create_person.rs
src/domain/: entities.rs
src/domain/entities/: outbox.rs  person.rs
src/domain/entities/person/: address.rs
src/domain/ports/: output.rs
src/domain/ports/output/: outbox_repository.rs  person_repository.rs
src/domain/value_objects/: cnpj.rs  cpf.rs  mod.rs  zip_code.rs
src/infrastructure/adapters/: output.rs
src/infrastructure/adapters/input/: http.rs
src/infrastructure/adapters/input/http/: person_dto.rs  person_handler.rs
src/infrastructure/adapters/output/: postgres_outbox_repository.rs  postgres_person_repository.rs
