[package]
name = "person-service-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# 1. Web Framework & Async Runtime
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# 2. Banco de Dados (Escrita - Postgres)
# Usaremos sqlx para ter controle total das transações do Outbox
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }

# 3. Mensageria (Kafka)
# rdkafka requer que o build-essential esteja instalado no Ubuntu
rdkafka = { version = "0.39.0", features = ["cmake-build"] }

# 4. Serialização e Tipos
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# 5. Utilitários para Clean/Hexagonal Architecture
async-trait = "0.1"        # Necessário para definir Traits assíncronas (Ports)
dotenvy = "0.15"           # Para ler o arquivo .env com as credenciais
tracing = "0.1"            # Logs estruturados para monitoramento
tracing-subscriber = "0.3"

# 6. Banco de Dados (Leitura - MongoDB como exemplo de Doc DB)
mongodb = "3.5.1"
thiserror = "2.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"]